--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Photoshare</string>
+    <string name="hello">Hello World, PhotoShare!</string>
+    <string name="app_name">照片分享</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
